guides/6-namespaces/system-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: test-system
  labels:
    type: system
