guides/6-namespaces/web-server-limitless.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server-limitless
spec:
  replicas: 3
  selector:
    matchLabels:
      name: web-server-limitless
  template:
    metadata:
      labels:
        name: web-server-limitless
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.2
