guides/6-namespaces/web-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
spec:
  replicas: 3
  selector:
    matchLabels:
      name: web-server
  template:
    metadata:
      labels:
        name: web-server
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.2
