guides/6-namespaces/web-server-service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: web-server-nodeport
  namespace: web-server
spec:
  ports:
  - port: 80
    targetPort: 80
    nodePort: 32123
  selector:
    name: web-server
  type: NodePort
