guides/6-namespaces/web-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-server
  namespace: web-server
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: web-server
  type: ClusterIP
